--- a/index.html
+++ b/index.html
@@ -20,71 +20,32 @@
 
     <link rel="stylesheet" href="./css/main.css">
 </head>
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 <!--
 //prototype of this page
 https://www.bootply.com/WLVUWn8xN0
 -->
+<nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark  v-border">
+    <ul class="nav navbar-brand">
+        Alexei Konkin
+    </ul>
+    <ul class="nav nav-pills ml-auto float-right extended-width-group text-center">
+        <li class="nav-item extended-width-button">
+            <a class="nav-link active" href="#about">About</a>
+        </li>
+        <li class="nav-item extended-width-button">
+            <a class="nav-link" href="#portfolio">Portfolio</a>
+        </li>
+        <li class="nav-item extended-width-button">
+            <a class="nav-link" href="#contacts">Contacts</a>
+        </li>
 
-<!--div class="navbar navbar-default navbar-fixed-top container-fluid v-border">
-    <div class="navbar-collapse collapse navbar-right">
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">More</a></li>
-            <li><a href="#">Options</a></li>
-        </ul>
-        <ul>
-        </ul>
-    </div>
-</div-->
+    </ul>
+</nav>
 
-<!--nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">WebSiteName</a>
-        </div>
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Page 1</a></li>
-            <li><a href="#">Page 2</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        </ul>
-    </div>
-</nav-->
-<div class="container-bump">
-
-    <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark v-border">
-        <ul class="nav navbar-brand">
-         Alexei Konkin
-        </ul>
-        <ul class="nav navbar-nav ml-auto float-right">
-
-            <li class="nav-item">
-                <div class="btn-group btn-group-toggle extended-width-group" data-toggle="buttons">
-                    <label class="btn btn-secondary active extended-width-button">
-                        <input type="radio" name="options" id="option1" autocomplete="off" checked> About
-                    </label>
-                    <label class="btn btn-secondary extended-width-button">
-                        <input type="radio" name="options" id="option2" autocomplete="off"> Portfolio
-                    </label>
-                    <label class="btn btn-secondary extended-width-button">
-                        <input type="radio" name="options" id="option3" autocomplete="off"> Contacts
-                    </label>
-                </div>
-             </li>
-        </ul>
-      </nav>
-</div>
-<div class="row"><br></div>
-
-<!-- portfolio web -->
 <ul class="list-group">
-    <li class="list-group-item v-border list-item-height">
-        <h3>On Scroll Sticky Header</h3>
+    <li class="list-group-item v-border list-item-height container-fluid" id="about">
+        <h3>About</h3>
         <p>The header will stick to the top when you reach its scroll position.</p>
         <p>Scroll back up to remove the sticky effect.</p>
         <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum,
@@ -94,16 +55,16 @@ https://www.bootply.com/WLVUWn8xN0
         <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum,
             altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
     </li>
-    <li class="list-group-item v-border list-item-height">
-        <h3>On Scroll Sticky Header</h3>
+    <li class="list-group-item v-border list-item-height" id="portfolio">
+        <h3>Portfolio</h3>
         <p>The header will stick to the top when you reach its scroll position.</p>
         <p>Scroll back up to remove the sticky effect.</p>
         <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
         <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
         <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
     </li>
-    <li class="list-group-item v-border list-item-height">
-        <h3>On Scroll Sticky Header</h3>
+    <li class="list-group-item v-border list-item-height" id="contacts">
+        <h3>Contacts</h3>
         <p>The header will stick to the top when you reach its scroll position.</p>
         <p>Scroll back up to remove the sticky effect.</p>
         <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
