added page footer with the style that is the same as the page header updated behavior of the menu on top (styling)

--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@ https://www.bootply.com/WLVUWn8xN0
     </ul>
 </nav>
 
+<!--
+https://drive.google.com/file/d/1uYSFguabk11mLHIqUELsvb4WjSf6-mTk/view?usp=sharing
+-->
+
 <ul class="list-group">
-    <li class="list-group-item v-border list-item-height container-fluid" id="about">
+    <li class="list-group-item v-border list-item-height" id="about">
         <h3>About</h3>
         <p>The header will stick to the top when you reach its scroll position.</p>
         <p>Scroll back up to remove the sticky effect.</p>
@@ -72,9 +76,12 @@ https://www.bootply.com/WLVUWn8xN0
         <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
     </li>
 </ul>
-<footer class="text-center mt-4 mb-5 v-border"> Written and coded by
+<footer class="text-center bg-dark text-white">
+    <p>
+    Written and coded by
     <a href="https://www.freecodecamp.org/alexkonkin" target="_blank"> Alexey Konkin </a>
-
+    </p>
+    <br>
 </footer>
 </body>
 </html>
