--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ https://www.bootply.com/WLVUWn8xN0
 -->
 <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark  v-border">
     <ul class="nav navbar-brand">
-        Alexei Konkin
+        Alexey Konkin
     </ul>
     <ul class="nav nav-pills ml-auto float-right extended-width-group text-center">
         <li class="nav-item extended-width-button">
@@ -47,29 +47,125 @@ https://www.bootply.com/WLVUWn8xN0
 https://drive.google.com/file/d/1uYSFguabk11mLHIqUELsvb4WjSf6-mTk/view?usp=sharing
 -->
 
-<ul class="list-group">
+<ul class="list-group ml-5 mr-5">
     <li class="list-group-item v-border list-item-height" id="about">
         <h3>About</h3>
-        <p>The header will stick to the top when you reach its scroll position.</p>
-        <p>Scroll back up to remove the sticky effect.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum,
-            altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum,
-            altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum,
-            altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        <div class="row">
+            <div class="v-border col-8">
+                <br>
+            </div>
+            <div class="v-border col-1">
+
+            </div>
+            <div class="v-border col-2">
+                <figure >
+                    <img src="https://lh3.googleusercontent.com/B0sAvhyvJH-qP_SOfP2TL1KAgrP1cSA-JDp5wA2qNqRt1uQFx5YJFqTMdaIMBPtE2QBJl1yBrkvIog=w1920-h1014-rw" class="img-fluid myclass center-block" style="background-color: white" alt="The Pulpit Rock">
+                    <figcaption class="text-center" style="background-color: white"></figcaption>
+                </figure>
+            </div>
+        </div>
+
     </li>
+
+    <!--
+     https://getbootstrap.com/docs/4.0/utilities/flex/#align-self
+     https://getbootstrap.com/docs/4.0/layout/utilities-for-layout/
+     -->
     <li class="list-group-item v-border list-item-height" id="portfolio">
         <h3>Portfolio</h3>
-        <p>The header will stick to the top when you reach its scroll position.</p>
-        <p>Scroll back up to remove the sticky effect.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        <p>Below you can find some information about the projects that I have implemented during my work on FreeCode camp projects.</p>
+        <div class="container-fluid pre-scrollable v-border" style="min-height: 80%; min-width:100%; ">
+            <!--div class="row h-20">
+                <div class="col col-md-4 v-border">col</div>
+                <div class="col col-md-4 v-border">col</div>
+                <div class="col col-md-4 v-border">col</div>
+             </div>
+            <div class="row">
+                <div class="col col-md-4 v-border">col</div>
+                <div class="col col-md-4 v-border">col</div>
+                <div class="col col-md-4 v-border">col</div>
+            </div-->
+
+            <!--div class="jumbotron  col-md-4 v-border jumbo-box">
+                <h1>Tizen App header</h1>
+                <p>This header is made with Bootstrap for a Tizen application. </p>
+            </div>
+            <div class="jumbotron  col-md-4 v-border jumbo-box">
+                <h1>Tizen App header</h1>
+                <p>This header is made with Bootstrap for a Tizen application. </p>
+            </div>
+            <div class="jumbotron  col-md-4 v-border jumbo-box">
+                <h1>Tizen App header</h1>
+                <p>This header is made with Bootstrap for a Tizen application. </p>
+            </div>
+
+
+
+
+            <div class="jumbotron  col-md-4 jumbo-box">
+                <h1>Tizen App header</h1>
+                <p>This header is made with Bootstrap for a Tizen application. </p>
+            </div>
+            <div class="jumbotron  col-md-4 jumbo-box">
+                <h1>Tizen App header</h1>
+                <p>This header is made with Bootstrap for a Tizen application. </p>
+            </div>
+            <div class="jumbotron  col-md-4 jumbo-box">
+                <h1>Tizen App header</h1>
+                <p>This header is made with Bootstrap for a Tizen application. </p>
+            </div-->
+            <!--div class="box v-border">
+                <div class="v-border">One</div>
+                <div class="v-border">Two</div>
+                <div class="v-border">Three</div>
+                <div class="v-border">Four</div>
+                <div class="v-border">Five</div>
+                <div class="v-border">Six</div>
+                <div class="v-border">Seven</div>
+                <div class="v-border">Eight</div>
+                <div class="v-border">Nine</div>
+            </div-->
+
+        </div>
+            <!--div class="jumbotron" style="width: 30%; height: 30%">
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 pull-right ">
+                    <img vspace="20" class="jumbotronwidth" alt=" " src="./img/the-blue-tick-md.png">
+                </div>
+                <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+                    <h4>
+                        Pomodoro timer
+                    </h4>
+
+                    <p>
+                        This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.
+                    </p>
+                    <p>
+                        <a class="btn btn-primary btn-large" href="#">Learn more</a>&nbsp;<a class="btn btn-primary btn-large" href="#">Extras</a>
+                    </p>
+                </div></div>
+
+            <div class="jumbotron " style="width: 30%">
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 pull-right ">
+                    <img vspace="20" class="jumbotronwidth" alt=" " src="./img/the-blue-tick-md.png">
+                </div>
+                <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+                    <h1>
+                        Hello, world!
+                    </h1>
+
+                    <p>
+                        This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.
+                    </p>
+                    <p>
+                        <a class="btn btn-primary btn-large" href="#">Learn more</a>&nbsp;<a class="btn btn-primary btn-large" href="#">Extras</a>
+                    </p>
+                </div></div-->
+
+        </div>
     </li>
     <li class="list-group-item v-border list-item-height" id="contacts">
         <h3>Contacts</h3>
-        <p>The header will stick to the top when you reach its scroll position.</p>
+        <p>Information below would allow you to get in touch with me via any of the means that are comfotrable for you.</p>
         <p>Scroll back up to remove the sticky effect.</p>
         <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
         <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
