stubs for portfolio imtems have been implemented via the bootstrap flexbox feature

--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@ https://drive.google.com/file/d/1uYSFguabk11mLHIqUELsvb4WjSf6-mTk/view?usp=shari
         <h3>Portfolio</h3>
         <p>Below you can find some information about the projects that I have implemented during my work on FreeCode camp projects.</p>
         <div class="container-fluid pre-scrollable v-border" style="min-height: 80%; min-width:100%; ">
+            <div class="d-flex flex-wrap justify-content-left">
+                <div class="p-2 v-border ml-3 mr-3 mt-3 mb-3" style="height:350px;width:350px">Flex item</div>
+                <div class="p-2 v-border ml-3 mr-3 mt-3 mb-3" style="height:350px;width:350px">Flex item</div>
+                <div class="p-2 v-border ml-3 mr-3 mt-3 mb-3" style="height:350px;width:350px">Flex item</div>
+                <div class="p-2 v-border ml-3 mr-3 mt-3 mb-3" style="height:350px;width:350px">Flex item</div>
+                <div class="p-2 v-border ml-3 mr-3 mt-3 mb-3" style="height:350px;width:350px">Flex item</div>
+            </div>
             <!--div class="row h-20">
                 <div class="col col-md-4 v-border">col</div>
                 <div class="col col-md-4 v-border">col</div>
