implemented stubs for the projects that are implemented as a fixed size containers inside a parent container

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ https://drive.google.com/file/d/1uYSFguabk11mLHIqUELsvb4WjSf6-mTk/view?usp=shari
             </div>
             <div class="v-border col-2">
                 <figure >
-                    <img src="https://lh3.googleusercontent.com/B0sAvhyvJH-qP_SOfP2TL1KAgrP1cSA-JDp5wA2qNqRt1uQFx5YJFqTMdaIMBPtE2QBJl1yBrkvIog=w1920-h1014-rw" class="img-fluid myclass center-block" style="background-color: white" alt="The Pulpit Rock">
+                    <img src="http://drive.google.com/uc?export=view&id=1uYSFguabk11mLHIqUELsvb4WjSf6-mTk" class="img-fluid myclass center-block" style="background-color: white" alt="The Pulpit Rock">
                     <figcaption class="text-center" style="background-color: white"></figcaption>
                 </figure>
             </div>
@@ -70,18 +70,80 @@ https://drive.google.com/file/d/1uYSFguabk11mLHIqUELsvb4WjSf6-mTk/view?usp=shari
     <!--
      https://getbootstrap.com/docs/4.0/utilities/flex/#align-self
      https://getbootstrap.com/docs/4.0/layout/utilities-for-layout/
+
+     Uncer construction images
+     https://www.google.com/imgres?imgurl=http%3A%2F%2Fwww.alateiagroup.com%2Fimages%2FWebsite-Under-Construction-template1.jpg&imgrefurl=http%3A%2F%2Fwww.alateiagroup.com%2F&docid=JOiA8oTojniviM&tbnid=YjnP2RaDcsHIoM%3A&vet=10ahUKEwiZsYDPkvvaAhVFkywKHQuQD1UQMwhKKA4wDg..i&w=1200&h=798&client=firefox-b&bih=615&biw=1280&q=web%20project%20under%20construction%20image&ved=0ahUKEwiZsYDPkvvaAhVFkywKHQuQD1UQMwhKKA4wDg&iact=mrc&uact=8#h=798&imgdii=pVf7KTp8NGdRZM:&vet=10ahUKEwiZsYDPkvvaAhVFkywKHQuQD1UQMwhKKA4wDg..i&w=1200
      -->
     <li class="list-group-item v-border list-item-height" id="portfolio">
         <h3>Portfolio</h3>
         <p>Below you can find some information about the projects that I have implemented during my work on FreeCode camp projects.</p>
-        <div class="container-fluid pre-scrollable v-border" style="min-height: 80%; min-width:100%; ">
+        <div class="container-fluid pre-scrollable border-projects" style="min-height: 80%; min-width:100%; ">
             <div class="d-flex flex-wrap justify-content-left">
-                <div class="p-2 v-border ml-3 mr-3 mt-3 mb-3" style="height:350px;width:350px">Flex item</div>
-                <div class="p-2 v-border ml-3 mr-3 mt-3 mb-3" style="height:350px;width:350px">Flex item</div>
-                <div class="p-2 v-border ml-3 mr-3 mt-3 mb-3" style="height:350px;width:350px">Flex item</div>
-                <div class="p-2 v-border ml-3 mr-3 mt-3 mb-3" style="height:350px;width:350px">Flex item</div>
-                <div class="p-2 v-border ml-3 mr-3 mt-3 mb-3" style="height:350px;width:350px">Flex item</div>
-            </div>
+                <div class="p-2 border-item ml-3 mr-3 mt-3 mb-3" style="height:350px;width:350px">
+                    <div class="text-center project-caption-bg">Random Quote Machine</div>
+                    <figure >
+                        <img src="http://drive.google.com/uc?export=view&id=1NbdcvNhtumFkE8U6WWJp3cs9IxkIPe_i" class="img-fluid myclass center-block" style="background-color: white" alt="The Pulpit Rock">
+                        <figcaption class="text-center" style="background-color: white"></figcaption>
+                    </figure>
+                    <a href="#" class="btn btn-primary btn-block button-project project-caption-bg">Get more info about the project</a>
+                </div>
+                <div class="p-2 border-item ml-3 mr-3 mt-3 mb-3" style="height:350px;width:350px">
+                    <div class="text-center project-caption-bg">Local Weather</div>
+                    <figure >
+                        <img src="http://drive.google.com/uc?export=view&id=1NbdcvNhtumFkE8U6WWJp3cs9IxkIPe_i" class="img-fluid myclass center-block" style="background-color: white" alt="The Pulpit Rock">
+                        <figcaption class="text-center" style="background-color: white"></figcaption>
+                    </figure>
+                    <a href="#" class="btn btn-primary btn-block button-project project-caption-bg">Get more info about the project</a>
+                </div>
+                <div class="p-2 border-item ml-3 mr-3 mt-3 mb-3" style="height:350px;width:350px">
+                    <div class="text-center project-caption-bg">Wikipedia Viewer</div>
+                    <figure >
+                        <img src="http://drive.google.com/uc?export=view&id=1NbdcvNhtumFkE8U6WWJp3cs9IxkIPe_i" class="img-fluid myclass center-block" style="background-color: white" alt="The Pulpit Rock">
+                        <figcaption class="text-center" style="background-color: white"></figcaption>
+                    </figure>
+                    <a href="#" class="btn btn-primary btn-block button-project project-caption-bg">Get more info about the project</a>
+                </div>
+                <div class="p-2 border-item ml-3 mr-3 mt-3 mb-3" style="height:350px;width:350px">
+                    <div class="text-center project-caption-bg">Twitch.tv JSON API</div>
+                    <figure >
+                        <img src="http://drive.google.com/uc?export=view&id=1NbdcvNhtumFkE8U6WWJp3cs9IxkIPe_i" class="img-fluid myclass center-block" style="background-color: white" alt="The Pulpit Rock">
+                        <figcaption class="text-center" style="background-color: white"></figcaption>
+                    </figure>
+                    <a href="#" class="btn btn-primary btn-block button-project project-caption-bg">Get more info about the project</a>
+                </div>
+                <div class="p-2 border-item ml-3 mr-3 mt-3 mb-3" style="height:350px;width:350px">
+                    <div class="text-center project-caption-bg">Calculator</div>
+                    <figure >
+                        <img src="http://drive.google.com/uc?export=view&id=1NbdcvNhtumFkE8U6WWJp3cs9IxkIPe_i" class="img-fluid myclass center-block" style="background-color: white" alt="The Pulpit Rock">
+                        <figcaption class="text-center" style="background-color: white"></figcaption>
+                    </figure>
+                    <a href="#" class="btn btn-primary btn-block button-project project-caption-bg">Get more info about the project</a>
+                </div>
+                <div class="p-2 border-item ml-3 mr-3 mt-3 mb-3" style="height:350px;width:350px">
+                    <div class="text-center project-caption-bg">Pomodoro Clock</div>
+                    <figure >
+                        <img src="http://drive.google.com/uc?export=view&id=1NbdcvNhtumFkE8U6WWJp3cs9IxkIPe_i" class="img-fluid myclass center-block" style="background-color: white" alt="The Pulpit Rock">
+                        <figcaption class="text-center" style="background-color: white"></figcaption>
+                    </figure>
+                    <a href="#" class="btn btn-primary btn-block button-project project-caption-bg">Get more info about the project</a>
+                </div>
+                <div class="p-2 border-item ml-3 mr-3 mt-3 mb-3" style="height:350px;width:350px">
+                    <div class="text-center project-caption-bg">Tic Tac Toe Game</div>
+                    <figure >
+                        <img src="http://drive.google.com/uc?export=view&id=1NbdcvNhtumFkE8U6WWJp3cs9IxkIPe_i" class="img-fluid myclass center-block" style="background-color: white" alt="The Pulpit Rock">
+                        <figcaption class="text-center" style="background-color: white"></figcaption>
+                    </figure>
+                    <a href="#" class="btn btn-primary btn-block button-project project-caption-bg">Get more info about the project</a>
+                </div>
+                <div class="p-2 border-item ml-3 mr-3 mt-3 mb-3" style="height:350px;width:350px">
+                    <div class="text-center project-caption-bg">Simon Game</div>
+                    <figure >
+                        <img src="http://drive.google.com/uc?export=view&id=1NbdcvNhtumFkE8U6WWJp3cs9IxkIPe_i" class="img-fluid myclass center-block" style="background-color: white" alt="The Pulpit Rock">
+                        <figcaption class="text-center" style="background-color: white"></figcaption>
+                    </figure>
+                    <a href="#" class="btn btn-primary btn-block button-project project-caption-bg">Get more info about the project</a>
+                </div>
+             </div>
             <!--div class="row h-20">
                 <div class="col col-md-4 v-border">col</div>
                 <div class="col col-md-4 v-border">col</div>
