customized buttons with font awesome icons were added to the Contacts section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <!--script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 
+    <!--link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous"-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -25,7 +27,7 @@
 //prototype of this page
 https://www.bootply.com/WLVUWn8xN0
 -->
-<nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark  v-border">
+<nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
     <ul class="nav navbar-brand">
         Alexey Konkin
     </ul>
@@ -43,21 +45,27 @@ https://www.bootply.com/WLVUWn8xN0
     </ul>
 </nav>
 
-<!--
-https://drive.google.com/file/d/1uYSFguabk11mLHIqUELsvb4WjSf6-mTk/view?usp=sharing
--->
-
 <ul class="list-group ml-5 mr-5">
-    <li class="list-group-item v-border list-item-height" id="about">
+    <li class="list-group-item list-item-height" id="about">
         <h3>About</h3>
-        <div class="row">
-            <div class="v-border col-8">
+        <div class="h-100 row align-items-start">
+            <div class="col-8">
+                <blockquote class="blockquote">
+                    <p class="mb-0">I am not going to share with you a detailed description of my life on this page,<br>
+                        becasue it is a sample page that is dedicated to my FreeCode Camp education.<br>
+                        <br>
+                        I just want to mention here that I would like to learn<br>
+                        about JavaScript and relevant frameworks as much as I can...
+                    </p>
+                    <br>
+                    <footer class="blockquote-footer">The author of this page, <cite title="Source Title">Alexey Konkin</cite></footer>
+                </blockquote>
                 <br>
             </div>
-            <div class="v-border col-1">
+            <div class="col-1">
 
             </div>
-            <div class="v-border col-2">
+            <div class="col-2">
                 <figure >
                     <img src="http://drive.google.com/uc?export=view&id=1uYSFguabk11mLHIqUELsvb4WjSf6-mTk" class="img-fluid myclass center-block" style="background-color: white" alt="The Pulpit Rock">
                     <figcaption class="text-center" style="background-color: white"></figcaption>
@@ -73,11 +81,16 @@ https://drive.google.com/file/d/1uYSFguabk11mLHIqUELsvb4WjSf6-mTk/view?usp=shari
 
      Uncer construction images
      https://www.google.com/imgres?imgurl=http%3A%2F%2Fwww.alateiagroup.com%2Fimages%2FWebsite-Under-Construction-template1.jpg&imgrefurl=http%3A%2F%2Fwww.alateiagroup.com%2F&docid=JOiA8oTojniviM&tbnid=YjnP2RaDcsHIoM%3A&vet=10ahUKEwiZsYDPkvvaAhVFkywKHQuQD1UQMwhKKA4wDg..i&w=1200&h=798&client=firefox-b&bih=615&biw=1280&q=web%20project%20under%20construction%20image&ved=0ahUKEwiZsYDPkvvaAhVFkywKHQuQD1UQMwhKKA4wDg&iact=mrc&uact=8#h=798&imgdii=pVf7KTp8NGdRZM:&vet=10ahUKEwiZsYDPkvvaAhVFkywKHQuQD1UQMwhKKA4wDg..i&w=1200
+     #83868a
+    #e5eefb
+
      -->
-    <li class="list-group-item v-border list-item-height" id="portfolio">
+    <li class="list-group-item list-item-height" id="portfolio">
         <h3>Portfolio</h3>
-        <p>Below you can find some information about the projects that I have implemented during my work on FreeCode camp projects.</p>
-        <div class="container-fluid pre-scrollable border-projects" style="min-height: 80%; min-width:100%; ">
+        <blockquote class="blockquote">
+        <p class="mb-0">Below you can find some information about the projects that I have implemented during my work on FreeCode camp training.</p>
+        </blockquote>
+        <div class="container-fluid pre-scrollable border-item" style="min-height: 80%; min-width:100%; ">
             <div class="d-flex flex-wrap justify-content-left">
                 <div class="p-2 border-item ml-3 mr-3 mt-3 mb-3" style="height:350px;width:350px">
                     <div class="text-center project-caption-bg">Random Quote Machine</div>
@@ -144,101 +157,30 @@ https://drive.google.com/file/d/1uYSFguabk11mLHIqUELsvb4WjSf6-mTk/view?usp=shari
                     <a href="#" class="btn btn-primary btn-block button-project project-caption-bg">Get more info about the project</a>
                 </div>
              </div>
-            <!--div class="row h-20">
-                <div class="col col-md-4 v-border">col</div>
-                <div class="col col-md-4 v-border">col</div>
-                <div class="col col-md-4 v-border">col</div>
-             </div>
-            <div class="row">
-                <div class="col col-md-4 v-border">col</div>
-                <div class="col col-md-4 v-border">col</div>
-                <div class="col col-md-4 v-border">col</div>
-            </div-->
-
-            <!--div class="jumbotron  col-md-4 v-border jumbo-box">
-                <h1>Tizen App header</h1>
-                <p>This header is made with Bootstrap for a Tizen application. </p>
-            </div>
-            <div class="jumbotron  col-md-4 v-border jumbo-box">
-                <h1>Tizen App header</h1>
-                <p>This header is made with Bootstrap for a Tizen application. </p>
-            </div>
-            <div class="jumbotron  col-md-4 v-border jumbo-box">
-                <h1>Tizen App header</h1>
-                <p>This header is made with Bootstrap for a Tizen application. </p>
-            </div>
-
-
-
-
-            <div class="jumbotron  col-md-4 jumbo-box">
-                <h1>Tizen App header</h1>
-                <p>This header is made with Bootstrap for a Tizen application. </p>
-            </div>
-            <div class="jumbotron  col-md-4 jumbo-box">
-                <h1>Tizen App header</h1>
-                <p>This header is made with Bootstrap for a Tizen application. </p>
-            </div>
-            <div class="jumbotron  col-md-4 jumbo-box">
-                <h1>Tizen App header</h1>
-                <p>This header is made with Bootstrap for a Tizen application. </p>
-            </div-->
-            <!--div class="box v-border">
-                <div class="v-border">One</div>
-                <div class="v-border">Two</div>
-                <div class="v-border">Three</div>
-                <div class="v-border">Four</div>
-                <div class="v-border">Five</div>
-                <div class="v-border">Six</div>
-                <div class="v-border">Seven</div>
-                <div class="v-border">Eight</div>
-                <div class="v-border">Nine</div>
-            </div-->
-
         </div>
-            <!--div class="jumbotron" style="width: 30%; height: 30%">
-                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 pull-right ">
-                    <img vspace="20" class="jumbotronwidth" alt=" " src="./img/the-blue-tick-md.png">
-                </div>
-                <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
-                    <h4>
-                        Pomodoro timer
-                    </h4>
-
-                    <p>
-                        This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.
-                    </p>
-                    <p>
-                        <a class="btn btn-primary btn-large" href="#">Learn more</a>&nbsp;<a class="btn btn-primary btn-large" href="#">Extras</a>
-                    </p>
-                </div></div>
-
-            <div class="jumbotron " style="width: 30%">
-                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 pull-right ">
-                    <img vspace="20" class="jumbotronwidth" alt=" " src="./img/the-blue-tick-md.png">
-                </div>
-                <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
-                    <h1>
-                        Hello, world!
-                    </h1>
-
-                    <p>
-                        This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.
-                    </p>
-                    <p>
-                        <a class="btn btn-primary btn-large" href="#">Learn more</a>&nbsp;<a class="btn btn-primary btn-large" href="#">Extras</a>
-                    </p>
-                </div></div-->
-
         </div>
     </li>
-    <li class="list-group-item v-border list-item-height" id="contacts">
+    <li class="list-group-item list-item-height" id="contacts">
         <h3>Contacts</h3>
-        <p>Information below would allow you to get in touch with me via any of the means that are comfotrable for you.</p>
-        <p>Scroll back up to remove the sticky effect.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        <blockquote class="blockquote">
+            <p class="mb-0">Information below would allow you to get in touch with me <br>
+                via any of the means that are comfotrable for you:</p>
+        </blockquote>
+        <div class="row">
+            <div class="col-5 text-center"></div>
+            <div class="col-2 text-center d-flex flex-wrap justify-content-left">
+
+                <a class="btn-lg btn-block btn-primary" href="#">
+                    <i class="fa fa-github pull-left" style="font-size:24px"></i> GitHub</a>
+
+                <a class="btn-lg btn-primary btn-block" href="#">
+                    <i class="fa fa-linkedin pull-left" style="font-size:24px"></i> LinkedIn</a>
+
+                <a class="btn-lg btn-primary btn-block" href="#">
+                    <i class="fa fa fa-free-code-camp pull-left" style="font-size:24px"></i> FreeCode Camp</a>
+            </div>
+            <div class="col-5"></div>
+         </div>
     </li>
 </ul>
 <footer class="text-center bg-dark text-white">
