Added three buttons on the Contacts page, removed unwanted shadow when button is clicked via box-shadow:none

--- a/index.html
+++ b/index.html
@@ -170,14 +170,15 @@ https://www.bootply.com/WLVUWn8xN0
             <div class="col-5 text-center"></div>
             <div class="col-2 text-center d-flex flex-wrap justify-content-left">
 
-                <a class="btn-lg btn-block btn-primary" href="#">
+                <a id="lnk_1" class="btn-lg btn-block btn-primary button-contacts" href="https://github.com/alexkonkin" target="_blank">
                     <i class="fa fa-github pull-left" style="font-size:24px"></i> GitHub</a>
 
-                <a class="btn-lg btn-primary btn-block" href="#">
+                <a id="lnk_2" class="btn-lg btn-primary btn-block button-contacts" href="https://www.linkedin.com/in/konkin-alex-33a3444a/" target="_blank">
                     <i class="fa fa-linkedin pull-left" style="font-size:24px"></i> LinkedIn</a>
 
-                <a class="btn-lg btn-primary btn-block" href="#">
+                <a id="lnk_3" class="btn-lg btn-primary btn-block button-contacts" href="https://www.freecodecamp.org/alexkonkin" target="_blank">
                     <i class="fa fa fa-free-code-camp pull-left" style="font-size:24px"></i> FreeCode Camp</a>
+
             </div>
             <div class="col-5"></div>
          </div>
